--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>안티방호복</title>
+    <title>Anti-PS</title>
   </head>
   <body>
     <div id="root"></div>
